final: финальные правки перед стилистическими правками